@@ -144,7 +144,7 @@ set_default_pdf_filename(void)
 static void
 show_version (void)
 {
-  fprintf(stdout, "\nThis is %s-%s by the DVIPDFMx project team,\n", PACKAGE, VERSION);
+  fprintf(stdout, "\nThis is %s-%s by the DVIPDFMx project team,\n", "dvipdfmx", VERSION);
   fprintf(stdout, "modified for TeX Live,\n");
   fprintf(stdout, "an extended version of dvipdfm-0.13.2c developed by Mark A. Wicks.\n");
   fprintf(stdout, "\nCopyright (C) 2002-2013 by the DVIPDFMx project team\n");
